fix wrap

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -29,6 +29,10 @@ body {
   grid-template-columns: repeat(2, 1fr);
 }
 
+.product {
+  min-width: 100%;
+}
+
 .product h5 {
   padding-top: 20px;
 }
@@ -36,6 +40,7 @@ body {
 .product p {
   font-size: 12px;
   margin: 0;
+  word-wrap: break-word;
 }
 
 .product img {
